# otlp-mmap

./: .gitignore  CONTRIBUTING.MD  FAQS.md  GITHUB_ISSUES_TEMPLATE.md  Makefile  PROTOCOL.MD  README.MD  SECURITY_AUDIT_REPORT.md  SLSA_AUDIT_SUMMARY.md  docker-compose.yml
.github/: dependabot.yml
.github/agents/: rust-test-creation-AGENT.md  rust-test-planning-AGENT.md  slsa-security-AGENT.md
.github/workflows/: ci.yml  docker-build.yml  security-audit.yml
benchmarks/: README.MD
java/otlp-mmap/: Dockerfile  README.md  build.sbt  test.sdk.mmap
java/otlp-mmap/mmapsdk/src/main/java/opentelemetry/proto/mmap/v1/: Mmap.java
java/otlp-mmap/mmapsdk/src/main/scala/io/opentelemetry/sdk/mmap/: Logger.scala  Meter.scala  MiniOpenTelemetry.scala  Tracer.scala
java/otlp-mmap/mmapsdk/src/main/scala/io/opentelemetry/sdk/mmap/internal/: ByteBufferOutputStream.scala  IdGenerator.scala  Readable.scala  SdkMmap.scala  Writer.scala  dictionary.scala  header.scala  ringbuffer.scala  util.scala
java/otlp-mmap/mmapsdk/src/main/scala/io/opentelemetry/sdk/mmap/internal/data/: Resource.scala  ResourceDictionary.scala  ScopeDictionary.scala  attributes.scala
java/otlp-mmap/mmapsdk/src/test/scala/io/opentelemetry/sdk/mmap/internal/: TestDictionary.scala  TestSdkMmap.scala
java/otlp-mmap/mmapsdk/src/test/scala/io/opentelemetry/sdk/mmap/internal/data/: TestAttributeHelper.scala  TestResourceDictionary.scala
java/otlp-mmap/src/main/java/opentelemetry/proto/mmap/v1/: Mmap.java
java/otlp-mmap/src/main/scala/: Main.scala  util.scala
java/otlp-mmap/src/main/scala/io/opentelemetry/otlp/mmap/: OtlpMmapExporter.scala
java/otlp-mmap/src/main/scala/io/opentelemetry/otlp/mmap/internal/: ByteBufferOutputStream.scala  OtlpExporterCommon.scala  SpanMarshaler.scala  dictionary.scala  ringbuffer.scala
java/otlp-mmap/src/main/scala/io/opentelemetry/sdk/mmap/: Logger.scala  Meter.scala  MiniOpenTelemetry.scala  Tracer.scala  proto.scala
java/otlp-mmap/src/main/scala/io/opentelemetry/sdk/mmap/internal/: Readable.scala  SdkMmap.scala  Writer.scala  dictionary.scala  ringbuffer.scala  util.scala  varint.scala
java/otlp-mmap/src/main/scala/io/opentelemetry/sdk/mmap/internal/data/: AnyValue.scala  KeyValue.scala  MetricDictionary.scala  ResourceDictionary.scala  ScopeDictionary.scala  StringDictionary.scala  attributes.scala  protos.scala
java/otlp-mmap/src/test/scala/: TestHttpWithMmap.scala
java/otlp-mmap/src/test/scala/io/opentelemetry/sdk/mmap/internal/: TestDictionary.scala  TestRingBuffer.scala  TestSdkMmap.scala  utils.scala
java/otlp-mmap/src/test/scala/io/opentelemetry/sdk/mmap/internal/data/: TestResourceDictionary.scala
mmap-collector/: Cargo.toml  Dockerfile  README.md
mmap-collector/src/: main.rs
mmap-collector/src/sdk_mmap/: dictionary.rs  error.rs  log.rs  mod.rs  reader.rs  ringbuffer.rs  trace.rs
mmap-collector/src/sdk_mmap/metric/: mod.rs  timeseries_id.rs
mmap-collector/src/sdk_mmap/metric/aggregation/: exp_hist.rs  gauge.rs  mod.rs  sum.rs
python/: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  pyproject.toml
python/otlp-mmap-example-server/: Dockerfile  pyproject.toml
python/otlp-mmap-example-server/src/otlp_mmap_example_server/: __init__.py  app.py
python/otlp-mmap-example-server/tests/: test_server.py
python/otlp-mmap-sdk/: pyproject.toml
python/otlp-mmap-sdk/src/otlp_mmap_sdk/: __init__.py  collector.py  common.py  logs.py  metrics.py  trace.py
python/otlp-mmap-sdk/tests/: test_readback.py  test_sdk.py
python/src/: lib.rs  sdk.rs
python/src/sdk_mmap/: dictionary.rs  error.rs  mod.rs  reader.rs  ringbuffer.rs
python/tests/: test_bindings.py  test_structure.py
rust/: Cargo.toml  Dockerfile  README.md  TESTING-TODO.md  mmap-collector.Dockerfile  python-lib.Dockerfile
rust/crates/otlp-mmap-collector/: Cargo.toml
rust/crates/otlp-mmap-collector/src/: config.rs  error.rs  lib.rs  log.rs  main.rs  test_utils.rs  trace.rs
rust/crates/otlp-mmap-collector/src/metric/: mod.rs  timeseries_id.rs
rust/crates/otlp-mmap-collector/src/metric/aggregation/: exp_hist.rs  gauge.rs  mod.rs  no_aggregation.rs  sum.rs
rust/crates/otlp-mmap-core/: Cargo.toml  README.md
rust/crates/otlp-mmap-core/benches/: ring_benchmark.rs
rust/crates/otlp-mmap-core/src/: config.rs  convert.rs  dictionary.rs  error.rs  header.rs  lib.rs  ringbuffer.rs
rust/crates/otlp-mmap-protocol/: Cargo.toml  README.md
rust/crates/otlp-mmap-protocol/src/: lib.rs
rust/crates/otlp-mmap-pybindings/: Cargo.toml  README.md
rust/crates/otlp-mmap-pybindings/src/: lib.rs  sdk.rs
rust/src/: main.rs
rust/src/oltp_mmap/: dictionary.rs  error.rs  mod.rs  ringbuffer.rs  span_ref.rs
rust/src/sdk_mmap/: data.rs  dictionary.rs  error.rs  log.rs  mod.rs  reader.rs  ringbuffer.rs  trace.rs
rust/src/sdk_mmap/metric/: exp_hist.rs  mod.rs  timeseries_id.rs
rust/src/sdk_mmap/metric/aggregation/: exp_hist.rs  gauge.rs  mod.rs  no_aggregation.rs  sum.rs
scenarios/: mmap-exporter.docker-compose.yml  mmap-sdk-throughput.docker-compose.yml  mmap-sdk-vs-pure-sdk.docker-compose.yml  mmap-sdk.docker-compose.yml  pure-otel-throughput.docker-compose.yml  python-mmap-sdk-vs-pure-sdk.docker-compose.yml
scenarios/grafana/provisioning/dashboards/: comparison-load-test.json  comparison-load-test.yaml
scenarios/k6-config/: k6-load-test.js
scenarios/otel-config/: otel-config.yaml  otel-lgtm-config.yaml  otel-prometheus-config.yaml  otel-throughput-config.yaml
scenarios/prometheus-config/: prometheus.yml
specification/: Dockerfile  FILE_PROTOCOL.MD  PROTO_BUILD.MD  mmap.proto
specification/docker_builder/: run_protoc.sh
specification/docker_builder/rust/: Cargo.toml
specification/docker_builder/rust/src/: main.rs
