[package]
name = "otlp-mmap-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.9"
opentelemetry-proto = { version="0.31.0", features = ["full"] }
serde={ version = "1.0.228", features = ["derive"] }
prost = "0.14.1"
thiserror="2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
moka = { version = "0.12.11", features = ["future"] }
tonic = "0.14.2"
itertools="0.13.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
tempfile = "3.23.0"
