[package]
name = "otlp-mmap-internal"
version = "0.1.0"
edition = "2021"

[lib]
name = "otlp_mmap_internal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
memmap2 = "0.9"
prost = "0.13"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
