[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "otlp-mmap-pybindings"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
manifest-path = "../rust/crates/otlp-mmap-pybindings/Cargo.toml"
module-name = "otlp_mmap_internal"
