[package]
name = "otlp-mmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
opentelemetry-proto = { version="0.26.1", features = ["with-serde", "gen-tonic", "trace"] }
serde={ version = "1.0.210", features = ["derive"] }
prost = "0.13.3"