[package]
name = "otlp-mmap-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
opentelemetry-proto = { version="0.26.1", features = ["with-serde", "gen-tonic", "trace"] }
serde={ version = "1.0.210", features = ["derive"] }
prost = "0.13.3"
thiserror="1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
moka = { version = "0.12.8", features = ["future"] }
tonic = "0.12.3"
itertools="0.13.0"
